--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ h4{
     text-transform: capitalize;
     margin: 25px;
     text-align: center;
+   
 }
 .image{
    
@@ -108,4 +109,7 @@ h4{
     height: 75px;
     width: 100%;
     background-color: rgb(41, 36, 36);
+    color: white;
+    text-align: center;
+    text-transform: capitalize;
 }
