--- a/style.css
+++ b/style.css
@@ -1,49 +1,125 @@
 *{
-    margin: 0;
-    padding: 0;
+   margin: 0;
+   padding: 0;
 }
-body{
-    background-color: #d3f1f1;
+ body{
+    background-color: rgb(212, 252, 253);
+ }
    
+
+.logo{
+    /* width: 20%; */
+   display: flex; 
+   justify-content: center;
+   align-items: center;
+   
+}
+.logo img{
+   width: 100px;
+   border-radius: 50px;
+   margin-left: 100px;
+   margin-right: 700px;
+}
+
+.navbar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: sticky;
+    top: 0;
+    cursor: pointer;
+}
+
+.nav-list{
+     display: flex;
+     width: 100%;
+     /* background-color: rgb(61 60 60); */
+     align-items: center;
+     justify-content: right;
+     
+}
+.nav-list li{
+     list-style: none;
+     padding: 33px;
+     
+}
+.nav-list li a{
+    color: white;
+     text-decoration:none ;
+    
+   
+}
+.nav-list li a:hover{
+    color: red;
+}
+
+.background{
+    background: rgba(0,0, 0, 0.7) url("p6.jpg");
+    background-size: cover;
+    background-blend-mode: darken;
+
+}
+.firstsection{
+    height: 85vh;
+}
+.box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    max-width: 50%;
+    margin: auto;
+    height:80% ;
+
+}
+.firsthalf{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     
 }
-h1{
+.textbig{
     font-size: 50px;
-    text-align: center;
     text-transform: capitalize;
-    color:#9d0b0b;
+    margin-left: 150px;
 }
-h2{
-    font-size: 40px;
-    margin: 25px;}
-.details{
-    margin: 25px;
+.textsmall{
+    font-size: 20px;
+    text-transform: capitalize;
+    margin-left: 185px;
+}
+.btn{
+    background-color: red;
+    color: white;
+    font-size: 25px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: 235px;
+   
+}
+.secright{
+    max-width: 80%;
+    margin: auto;
+    background-color: rgb(212, 252, 253);
 
+}
+.sectionTag{
+     font-size: 35px;
+}
+.sectionsubTag{
+    font-size: 20px;
 }
 .overview{
     font-size: 20px;
     text-transform: capitalize;
     margin: 25px;  
 }
-
-.detail{
-    font-size: 25px;
-}
 .pin_01{
     font-size: 25px;
     font-weight: 1000;
     text-transform: capitalize;
-}
-.pin_02{
-    font-size: 25px;
-    font-weight: 1000;
-    text-transform: capitalize;
-}
-
-.about{
-    font-size: 20px;
-    text-transform: capitalize;
-    margin-left: 25px;
 }
 h3{
     margin: 25px; 
@@ -92,24 +168,108 @@ h3{
     border-bottom: 1px solid #eee;
     border-right: 1px solid #eee;
 }
-h4{
-    font-size: 50px;
-    text-transform: capitalize;
-    margin: 25px;
-    text-align: center;
+
+
+.image img{
+    width: 800px;
    
 }
-.image{
-   
-    
-    background-color: rgb(236, 235, 241);
+.contact{
+    max-width: 80%;
+    margin: auto;
+   margin-top: 50px;
+    margin-bottom: 50px;
    
 }
-.footer{
-    height: 75px;
-    width: 100%;
-    background-color: rgb(41, 36, 36);
+.con{
+    font-size: 43px;
+}
+.name{
+    font-size: 25px;
+}
+.text-footer{
     color: white;
-    text-align: center;
-    text-transform: capitalize;
+    background-color: rgb(54, 49, 49);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 0;
+    
 }
+
+.burger{
+    display: none;
+    position: absolute;
+    cursor: pointer;
+    right: 5%;
+    top: 15px;
+
+}
+.line{
+    width: 33px;
+    background-color: white;
+    height: 4px;
+    margin: 3px 3px;
+}
+
+@media only screen and (max-width:1350px){
+    .nav-list{
+        flex-direction: column;
+     }
+   
+    .rightnav{
+        flex-direction: column;
+    }
+    .box{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: white;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        max-width: 100%;
+        margin: auto;
+        height:80% ;
+    
+    }
+    .firsthalf{
+        width: 80%;
+        /* display: flex; */
+        flex-direction: column;
+        justify-content: center;
+        
+    }
+    .textbig{
+        font-size: 30px;
+        text-transform: capitalize;
+        margin-left: 50px;
+    }
+    .textsmall{
+        font-size: 10px;
+        text-transform: capitalize;
+        margin-left: 85px;
+    }
+    .btn{
+        background-color: red;
+        color: white;
+        font-size: 15px;
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-left: 95px;
+       
+    }
+    .image img{
+        width: 200px;
+    }
+   
+    .burger{
+        display: block;
+    }
+    .h-nav{
+        height: 90px;
+    }
+    .v-class{
+        opacity: 0;
+    }
+    
+}
+
