--- a/resp.css
+++ b/resp.css
@@ -33,17 +33,33 @@
         font-size: 15px;
         padding-left: 15px;
         padding-right: 15px;
-        
-        
-       
        
     } 
-    .image{
-        
-    }
+    .sectionTag{
+        font-size: 25px;
+        font-weight: 800;
+        margin-top: 10px;
+        margin-bottom: 10px;
+   }
+   .sectionsubTag{
+       font-size: 10px;
+   }
+   ul{
+       font-size: 10px;
+   }
+    
     .image img{
         width: 200px;
        
+    }
+    .text-footer{
+        color: white;
+        background-color: rgb(54, 49, 49);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 30px 0;
+        font-size: 10px;
     }
    
     .burger{
@@ -58,7 +74,3 @@
     
 }
 
-@media only screen and (max-width:400px){
-
-
-}
