--- a/style.css
+++ b/style.css
@@ -102,37 +102,21 @@
 }
 .sectionTag{
      font-size: 35px;
+     font-weight: 800;
+     margin-top: 10px;
+     margin-bottom: 10px;
 }
 .sectionsubTag{
     font-size: 20px;
 }
-.overview{
+ul{
     font-size: 20px;
-    text-transform: capitalize;
-    margin: 25px;  
-}
-.pin_01{
-    font-size: 25px;
-    font-weight: 1000;
-    text-transform: capitalize;
 }
 .image img{
     width: 800px;
    
 }
-.contact{
-    max-width: 80%;
-    margin: auto;
-   margin-top: 50px;
-    margin-bottom: 50px;
-   
-}
-.con{
-    font-size: 43px;
-}
-.name{
-    font-size: 25px;
-}
+
 .text-footer{
     color: white;
     background-color: rgb(54, 49, 49);
@@ -140,7 +124,7 @@
     align-items: center;
     justify-content: center;
     padding: 30px 0;
-    
+    margin-top: 10px;
 }
 
 .burger{
