--- a/resp.css
+++ b/resp.css
@@ -12,7 +12,7 @@
         max-width: 100%;
         height:80% ;
        -moz-text-size-adjust: auto;
-    
+   
     }
      
     .textbig{
@@ -49,7 +49,7 @@
    }
     
     .image img{
-        width: 200px;
+        width: 350px;;
        
     }
     .text-footer{
